--- a/.env
+++ b/.env
@@ -17,9 +17,16 @@ CLOUDINARY_NAME=dbpk7mvzg
 CLOUDINARY_KEY=332623525787717
 CLOUDINARY_SECRET=AqaeEHpbI3P7gyBO4CRZlvANldU
 
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,202.28.49.122,10.80.21.37
+#DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,202.28.49.122,10.80.21.37
+DJANGO_ALLOWED_HOSTS=*
 DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:10323,http://localhost:8000,http://202.28.49.122:8000.,http://10.80.21.37:10323
 
 # Production mode
 DEBUG=False
 DJANGO_SECRET_KEY=django-insecure-g==fdl%rcf0s#t-ejx+-v0)iq5=8vf#(lmv*h$&-_ck1_-&1#z
+
+# Subpath
+PREFIX=s65114540323
+
+# Port ที่ container  expose (Django default 8000)
+EXPOSEPORT=8000
