--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ CLOUDINARY_SECRET=AqaeEHpbI3P7gyBO4CRZlvANldU
 
 #DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,202.28.49.122,10.80.21.37
 DJANGO_ALLOWED_HOSTS=*
-DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:10323,http://localhost:8000,http://202.28.49.122:8000.,http://10.80.21.37:10323
+DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:10323,http://localhost:8000,http://202.28.49.122:8000,http://10.80.21.37:10323,http://10.80.29.10:8000
 
 # Production mode
 DEBUG=False
